Somehow resolved overflow

--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #213547;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* overflow: hidden; */
 }
 
 h1 {
@@ -59,11 +60,12 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100%;
+  margin:auto;
+  height: auto;
   text-align: center;
 }
+
 
 @media (prefers-color-scheme: light) {
   :root {
